# noir-crypto-kit

./: README.md
knowledge-vault/: Preliminaries.md  SWIFFT Implementation.md  Sources.md
knowledge-vault/.obsidian/: community-plugins.json  workspace.json
knowledge-vault/.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
knowledge-vault/.obsidian/plugins/obsidian-latex-suite/: data.json
knowledge-vault/.obsidian/plugins/obsidian-spaced-repetition/: data.json
noir/: Nargo.toml  Prover.toml  Verifier.toml
noir/src/: const.nr  generate (copy).py  generate.py  hash.nr  main.nr
rust/: Cargo.toml
rust/src/: foreign_calls.rs  fs.rs  main.rs
