[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
serde_with = "3.7.0"
thiserror = "1.0.58"
hex = "0.4.3"

# noir dependencies
acvm = { git = "https://github.com/noir-lang/noir.git", tag = "v0.25.0" }
acir = { git = "https://github.com/noir-lang/noir.git", tag = "v0.25.0" }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir.git", tag = "v0.25.0" }
noirc_abi = { git = "https://github.com/noir-lang/noir.git", tag = "v0.25.0" }
noirc_driver = { git = "https://github.com/noir-lang/noir.git", tag = "v0.25.0" }
noirc_printable_type = { git = "https://github.com/noir-lang/noir.git", tag = "v0.25.0" }
nargo = { git = "https://github.com/noir-lang/noir.git", tag = "v0.25.0" }
libswifft = "0.1.0"

[build-dependencies]
bindgen = "0.69.4"
cc = { version = "1.0.90", features = ["parallel"] }


